objects/PriceHistory__c.object
<CustomObject>
    <description>Storage of historic prices</description>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>New Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>Old Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceBookEntry__c</fullName>
        <inlineHelpText>Link to PBE</inlineHelpText>
        <label>PriceBookEntry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Price History</relationshipLabel>
        <relationshipName>Price_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceRenewalCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Renewal Campaign</label>
        <referenceTo>PriceRenewalCampaign__c</referenceTo>
        <relationshipLabel>Price History</relationshipLabel>
        <relationshipName>Price_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price History</relationshipLabel>
        <relationshipName>Price_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price History</label>
    <nameField>
        <displayFormat>PH-{000000}</displayFormat>
        <label>Price History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>